ECL 1.0:
========

* New platforms:

 - Support for GNU/kFreeBSD

 - ECL has additionally been ported to GNU/Hurd (Pierre Thierry) and
   HP NonStop S-Series (Craig McDaniel)

* New features:

 - New commands, :RESTART, :R1, :R2, etc, allow invoking restarts (contributed
   by Chui Tey).

 - Interpreted functions can now be disassembled in the debugger. The commands
   are :D and :DISASSEMBLE.

 - New (private) function EXT::FUNCTION-LAMBDA-LIST, returns the lambda list of
   a function whenever it was recorded.

 - Implemented finalization on the lisp level. Only available for the Boehm
   Weiser GC. Finalizers are closures which can be attached to objects
   using SI:SET-FINALIZER and SI:GET-FINALIZER. Only one closure per
   object is allowed.

 - [Win32] Command-line arguments are now available for programs compiled with
   :SYSTEM set to :WINDOWS (M. Goffioul)

 - MAPCAR, MAPLIST, MAPC, MAPL, MAPCAN, MAPCON have now compiler macro functions
   which create equivalent inlined forms.

 - Support for C "long double" as lisp long-double datatype (originated from
   a patch by Lars Brinkhoff). Still missing compiler support for unboxed
   long double types.

 - TIME outputs information about consed bytes and calls to the garbage
   collector.

 - MAKE-ARRAY accepts a foreign pointer as an argument to :DISPLACED-TO That
   creates a lisp array on top of the foreign data and can be used to directly
   scan C strings, or unboxed arrays of numbers.

 - DFFI works now on AMD64 or Intel EMT64 (DFFI stands for Dynamical Foreign
   Function Interface and it is the component that allows ECL call directly
   C functions and create C callbacks without the C compiler being around).
   (initial code by M. Goffioul)

 - Using version 6.8 of the Boehm-Weiser garbage collector.

 - Using version 4.2.1 of the GMP library.

 - Random number generator based on the Mersenne-Twister algorithm (Based on
   code contributed by Roy Zywina).
