@@ -10,6 +10,8 @@ ECL 1.0:
 
 * New features:
 
+ - SBCL's SERVE-EVENT package has been ported to ECL by Steve Smith.
+
  - New commands, :RESTART, :R1, :R2, etc, allow invoking restarts (contributed
    by Chui Tey).
 
